k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: three-tier-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: three-tier-app-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: three-tier-app
spec:
  type: NodePort   # 🔥 expose externally
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30008   # 👈 backend external port
